(hel-669) Correction wrap du text dans le scroll des liste de favoris

--- a/src/frontend/ui/commun/StarButtonList/StarButtonList.module.css
+++ b/src/frontend/ui/commun/StarButtonList/StarButtonList.module.css
@@ -61,8 +61,9 @@
 }
 
 .listOverflowContainer {
-  overflow: scroll;
+  overflow: hidden scroll;
   height: 8.5rem;
+  text-wrap: wrap;
   border: none;
 }
 
